# invigil

./: .gitignore  .invigil.yml  .pre-commit-hooks.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PORTFOLIO.md  README.md  ROADMAP.md  SECURITY.md  action.yml  llms.txt  pyproject.toml  server.json
.github/requirements/: build.txt
.github/workflows/: ci.yml  codeql.yml  fix-pr.yml  nightly-smoke.yml  portfolio.yml  publish-mcp.yml  release.yml  scorecard.yml  stranger-gate.yml
badges/: bakex-ai.json  invigil-ai.json  invigil.json  kaaval-ai.json  kaaval.json
docs/: README.md  cli-reference.md  good-first-issues.md
examples/: multi-image.invigil.yml  python-app.invigil.yml
schema/: invigil.schema.json
src/invigil/: __init__.py  cli.py  config.py  context.py  engine.py  fixer.py  hookspecs.py  manager.py  mcp_server.py  model.py  mutator.py  portfolio.py  report.py  stranger.py
src/invigil/checks/: __init__.py  ai_native.py  fixes.py  g1_stranger.py  g2_errors.py  g3_supply.py  g4_evidence.py  g5_doors.py  tier1_secrets.py
src/invigil/profiles/: __init__.py  light.json  progressive.json  strict.json
tests/: test_ai_native.py  test_checks.py  test_cli.py  test_config.py  test_engine.py  test_error_surfacing.py  test_fix.py  test_g1_checks.py  test_manager.py  test_mcp_server.py  test_model.py  test_portfolio.py  test_profiles_json.py  test_report.py  test_resilience.py  test_static_checks.py  test_stranger.py
