[project]
name = "invigil"
version = "1.3.2"
description = "A CI quality gate that grades a repo against a product-quality doctrine — not code style."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Vamshi Krishna Santhapuri" }]
keywords = ["ci", "quality-gate", "github-actions", "supply-chain", "oss", "scorecard"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/invigil/invigil"
Issues = "https://github.com/invigil/invigil/issues"

[project.scripts]
invigil = "invigil.cli:main"

[project.optional-dependencies]
# A real pip "extra" so `pip install -e ".[dev]"` works on a clean CI runner.
# (A PEP 735 [dependency-groups] table is NOT installable via the [dev] extra
# syntax — pip silently succeeds with only a warning, which masks a missing
# pytest until the runner fails. Clean-machine green is a fact; local green is
# an opinion.)
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/invigil"]

[tool.ruff]
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
